--- a/test/custom.css
+++ b/test/custom.css
@@ -1,35 +1,35 @@
 /* CUSTOM STYLES FOR ACCENT JAVASCRIPT PARSER */
 .acc-custom {
-	background-color: #101;
-	color: #CCC;
+	background-color: #FFF;
+	color: #333;
 }
 
 .acc-custom .js-string,
 .acc-custom .js-type {
-	color: #949;
+	color: #2A2;
 }
 
-.acc-custom .js-declaration, 
-.acc-custom .js-operation, 
+.acc-custom .js-declaration,
+.acc-custom .js-operation,
 .acc-custom .js-special {
-	color: #797;
+	color: #595;
 	font-weight: bold !important;
 }
 
 .acc-custom .js-global {
-	color: #737;
+	color: #B77;
 	font-weight: bold !important;
 }
 
 .acc-custom .js-comment {
-	color: #555;
+	color: #AAA;
 	font-style: italic !important;
 }
 
 .acc-custom .js-regexp {
-	color: #A84;
+	color: #B55;
 }
  
 .acc-custom .js-numeric {
-	color: #FD5;
+	color: #57B;
 }
