added font fallback for accent highlighting

--- a/accent.css
+++ b/accent.css
@@ -10,7 +10,9 @@
  	overflow-x: scroll;
 	word-wrap: normal;
 	padding: 1.2%;
+
 	font-size: 1em;
+	font-family: "Ubuntu Mono", "Lucida Console", monospace;
  }
 
 .acc-dark {
